Update examples in README, mention PermGen space OOM condition
Closes #55